<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_shape"
        android:elevation="2dp"
        android:padding="5dp"
        android:layout_marginTop="425dp"
        android:visibility="invisible">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="25dp"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    å
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_password"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberPassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/authErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/error"
            android:text="@string/err_auth_failed"
            android:visibility="invisible" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="70dp"
            android:text="@string/btn_title_login"
            android:textColor="@color/textAccent"
            android:backgroundTint="@color/gray80"
            android:enabled="false" />


    </LinearLayout>

</RelativeLayout>
