<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true">

    <!-- app:srcCompat="@mipmap/todo_item" -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:id="@+id/frameLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingTop="25dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        >

        <!-- Section: Title -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:id="@+id/todo_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="100dp"
                android:text="Eine Titel des Todo Items"
                android:textSize="28dp"
                android:textStyle="bold"
                android:textColor="@color/textPrimary" />
            <RelativeLayout
                android:id="@+id/details_isDone_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/todo_isDone"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:text="nicht erledigt"
                    android:textColor="@color/error"
                    android:layout_alignParentRight="true"
                    />
                <ImageView
                    android:id="@+id/todo_item_icon_isDone"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_cancel"
                    android:layout_below="@id/todo_isDone"
                    android:tint="@color/error"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height= "0.7dp"
                android:background="@color/gray80"
                android:layout_below="@id/todo_item_title"
                android:layout_marginTop="30dp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Section: Description -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_alignParentRight="true"
                            app:srcCompat="@drawable/ic_todo"
                            android:tint="@color/colorPrimary" />
                        <View
                            android:layout_width="0.7dp"
                            android:layout_height= "match_parent"
                            android:background="@color/gray80"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:text="@string/todo_subtitle_description"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:textColor="@color/textPrimary"/>
                            <TextView
                                android:id="@+id/todo_item_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Ein langer langer langer Text Text Text Text für Beschreibung folgt hier...."
                                android:textSize="16dp"
                                android:textColor="@color/textPrimary" />
                        </LinearLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height= "0.7dp"
                        android:background="@color/gray80"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>

                <!-- Section: Due Date -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_alignParentRight="true"
                            app:srcCompat="@drawable/ic_time"
                            android:tint="@color/colorPrimary"/>
                        <View
                            android:layout_width="0.7dp"
                            android:layout_height= "match_parent"
                            android:background="@color/gray80"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:text="@string/todo_subtitle_dueDate"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:textColor="@color/textPrimary"/>
                            <TextView
                                android:id="@+id/todo_item_dueDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Fällig am"
                                android:textSize="16dp"
                                android:textColor="@color/textPrimary" />
                        </LinearLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height= "0.7dp"
                        android:background="@color/gray80"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>

                <!-- Section: Priority -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/todo_item_priority_icon"
                            android:layout_width="54dp"
                            android:layout_height="54dp"
                            android:layout_marginLeft="-3dp"
                            app:srcCompat="@drawable/ic_priority_none"
                            android:tint="@color/gray90"/>
                        <View
                            android:layout_width="0.7dp"
                            android:layout_height= "match_parent"
                            android:background="@color/gray80"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="15dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:text="@string/todo_subtitle_priority"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:textColor="@color/textPrimary"/>
                            <TextView
                                android:id="@+id/todo_item_priority"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="sehr hoch"
                                android:textSize="16dp"
                                android:textColor="@color/textPrimary" />
                        </LinearLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height= "0.7dp"
                        android:background="@color/gray80"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>

                <!-- Section: Linked Contacts -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="51dp"
                            android:layout_height="51dp"
                            app:srcCompat="@drawable/ic_contacts"
                            android:tint="@color/colorPrimary"/>
                        <View
                            android:layout_width="0.7dp"
                            android:layout_height= "match_parent"
                            android:background="@color/gray80"
                            android:layout_marginLeft="6dp"
                            android:layout_marginRight="15dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp"
                                android:text="@string/todo_subtitle_linked_contacts"
                                android:textSize="16dp"
                                android:textStyle="bold"
                                android:textColor="@color/textPrimary"/>
                            <GridView
                                android:id="@+id/contactsGridView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="25dp"
                                android:layout_marginTop="10dp"
                                android:columnWidth="70dp"
                                android:numColumns="auto_fit"
                                android:verticalSpacing="10dp"
                                android:horizontalSpacing="1dp"
                                android:gravity="center"
                                android:stretchMode="columnWidth">
                            </GridView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>